tests/workflow/positive/simple-def.s
global int x;

@initial
go()
{
  x = 0;
  y = x;
  terminate();
}
