tests/workflow/negative/terminal_self_loop.s
transition terminal -> terminal;

@terminal
go() {
  transitionTo(@terminal)
}
